# DuplicateNameHighlighter

./: .gitignore  .replit  CHANGELOG.md  README.md  README_INTEGRATED.md  __init__.py  demo.db  demo.py  duplicate_name_highlighter.spec  example_usage.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_demo.py  text_demo.py  version.py
.github/workflows/: ci.yml
attached_assets/: Pasted-Implementation-Plan-for-the-Duplicate-Name-Highlighter-App-Overview-and-Goals-This-project-involves--1750371850500_1750371850503.txt
core/: database.py  duplicate_tracker.py  ocr_processor.py  screen_capture.py  scroll_tracker.py
gui/: main_window.py  overlay.py  overlay_window.py  region_selector.py  settings_dialog.py
tests/: test_duplicate_tracker.py  test_phash.py  test_scroll_tracker.py  test_settings_dialog.py  test_settings_manager.py
tracker/: database.py  duplicate_tracker.py
utils/: database.py
