[project]
name = "DuplicateNameHighlighter"
version = "0.2.0"
description = "Highlight duplicate names in any scrollable window with OCR and overlay."
requires-python = ">=3.11"
dependencies = [
    "PyQt5>=5.15.0",
    "numpy",
    "opencv-python",
    "pillow",
    "pyautogui",
    "imagehash",
    "pytesseract"
]
